--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -38,12 +38,22 @@ body{
     box-shadow: 0 1px 10px 1px #333;
 }
 
+#userIcon {
+    width: 40px;
+    height: 40px;
+    border-radius: 50px;
+    /* background-color: var(--clr-msg-bkg); */
+    margin: 5px;
+    padding: 5px;
+    box-sizing: border-box;
+}
+
 #app_btns{
     height: 100%;
     float: right;
 }
 
-#header img{
+#header #app_btns img{
     height: 100%;
     margin-bottom: -6px;
     margin-right: 10px;
@@ -53,7 +63,7 @@ body{
 #chat_with{
     display: inline-block;
     font-weight: bold;
-    padding: 20px;
+    padding: 18px 0;
     vertical-align: top;
 }
 
