--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -31,6 +31,7 @@ body{
 #msgs_list ul li { padding: 5px 0; }
 
 #header{
+    position: relative;
     width: 100%;
     height: 50px;
     background-color: var(--clr-msg-me-bkg);
